feat: Badge Manager System v1.0.0